sequelize reference error

--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,7 @@
     Books
     <ul>
       <li><a href="/books/new">New Book</a></li>
-      <li><a href="all_books.html">List All</a></li>
+      <li><a href="/all-books">List All</a></li>
       <li><a href="/books?filter=overdue">List Overdue</a></li>
       <li><a href="/books?filter=checked_out">List Checked Out</a></li>
     </ul>
@@ -13,13 +13,13 @@
   <li>Patrons
     <ul>
       <li><a href="/patrons/new">New Patron</a></li>
-      <li><a href="all_patrons.html">List All</a></li>
+      <li><a href="/all-patrons">List All</a></li>
     </ul>
   </li>
   <li>Loans
     <ul>
       <li><a href="new_loan.html">New Loan</a></li>
-      <li><a href="all_loans.html">List All</a></li>
+      <li><a href="/all-loans">List All</a></li>
       <li><a href="overdue_loans.html">List Overdue</a></li>
       <li><a href="checked_loans.html">List Checked Out</a></li>
     </ul>
