--- a/views/return_book.html
+++ b/views/return_book.html
@@ -1,28 +1,25 @@
-<!DOCTYPE html>
-<html>
+<p><strong>Book Title: </strong>{{data.dataValues.book.dataValues.title}}</p>
+<p>
+  <strong>Loaned By: </strong>
+  {{data.dataValues.patron.dataValues.first_name}} {{data.dataValues.patron.dataValues.last_name}}
+</p>
+<p><strong>Loaned On: </strong>{{data.dataValues.loaned_on}}</p>
+<p><strong>Return By: </strong>{{data.dataValues.return_by}}</p>
 
-<head>
-    <title>Return Book</title>
-    <link rel="stylesheet" href="stylesheets/style.css">
-</head>
-<nav>
+<form action="/return-book/{{data.dataValues.id}}" method="post">
+
+  {{#if submissionFail}}
     <ul>
-        <li><a href="all_books.html">Books</a></li>
-        <li><a href="all_patrons.html">Patrons</a></li>
-        <li><a href="all_loans.html">Loans</a></li>
+      {{#each submissionFail.errors}}
+        <li>{{this.message}}</li>
+      {{/each}}
     </ul>
-</nav>
+  {{/if}}
 
-<body>
-    <h1>Patron: Return Book</h1>
-    <p><strong>Book Title: </strong>Harry Potter and the Goblet of Fire</p>
-    <p><strong>Loaned By: </strong>Andrew Chalkley</p>
-    <p><strong>Loaned On: </strong>2015-12-11</p>
-    <p><strong>Return By: </strong>2015-12-18</p>
-    <form>
-        <p> <label for="returned_on">Returned on:</label><input id="returned_on" type="text" value="2020-10-10"></p>
-        <p><input type="submit" value="Return Book"></p>
-    </form>
-</body>
+  <p>
+    <label for="returned_on">Returned on:</label>
+    <input id="returned_on" type="text" name="returned_on" value="{{data.dataValues.returned_on}}">
+  </p>
 
-</html>
+  <p><input type="submit" value="Return Book"></p>
+</form>
