--- a/views/error.html
+++ b/views/error.html
@@ -1,20 +1,31 @@
-{{#if error}}
+<!DOCTYPE html>
+<html>
 
-  <h1>{{error.message}}</h1>
-  <p>Go <a href="/">home</a>.</p>
+<head>
+    <title>New Book</title>
+    <link rel="stylesheet" href="stylesheets/style.css">
+</head>
+<nav>
+    <ul>
+        <li><a href="all_books.html">Books</a></li>
+        <li><a href="all_patrons.html">Patrons</a></li>
+        <li><a href="all_loans.html">Loans</a></li>
+    </ul>
+</nav>
 
-{{else}}
+<body>
+    <h1>New Book</h1>
+    <form>
+        <h2 class="error">Oooops!</h2>
+        <ul class="error">
+            <li>Author is required</li>
+        </ul>
+        <p> <label for="title">Title</label><input id="title" type="text"></p>
+        <p><label for="author">Author</label><input id="author" type="text"></p>
+        <p><label for="genre">Genre</label><input id="genre" type="text"></p>
+        <p><label for="first_published">First Published</label><input id="first_published" type="text"></p>
+        <p><input type="submit" value="Create New Book"></p>
+    </form>
+</body>
 
-  <h1>New Book</h1>
-  <form>
-      <h2 class="error">Oooops!</h2>
-      <ul class="error">
-          <li>Author is required</li>
-      </ul>
-      <p> <label for="title">Title</label><input id="title" type="text"></p>
-      <p><label for="author">Author</label><input id="author" type="text"></p>
-      <p><label for="genre">Genre</label><input id="genre" type="text"></p>
-      <p><label for="first_published">First Published</label><input id="first_published" type="text"></p>
-      <p><input type="submit" value="Create New Book"></p>
-  </form>
-{{/if}}
+</html>
