--- a/views/home.html
+++ b/views/home.html
@@ -1,27 +1,26 @@
-<h1>Library Manager</h1>
 <p>Welcome to Library Manager</p>
 <ul>
   <li>
     Books
     <ul>
-      <li><a href="/books/new">New Book</a></li>
+      <li><a href="/new-book">New Book</a></li>
       <li><a href="/all-books">List All</a></li>
-      <li><a href="/books?filter=overdue">List Overdue</a></li>
-      <li><a href="/books?filter=checked_out">List Checked Out</a></li>
+      <li><a href="/overdue-books">List Overdue</a></li>
+      <li><a href="/checked-books">List Checked Out</a></li>
     </ul>
   </li>
   <li>Patrons
     <ul>
-      <li><a href="/patrons/new">New Patron</a></li>
+      <li><a href="/new-patron">New Patron</a></li>
       <li><a href="/all-patrons">List All</a></li>
     </ul>
   </li>
   <li>Loans
     <ul>
-      <li><a href="new_loan.html">New Loan</a></li>
+      <li><a href="/new-loan">New Loan</a></li>
       <li><a href="/all-loans">List All</a></li>
-      <li><a href="overdue_loans.html">List Overdue</a></li>
-      <li><a href="checked_loans.html">List Checked Out</a></li>
+      <li><a href="/overdue-loans">List Overdue</a></li>
+      <li><a href="/checked-loans">List Checked Out</a></li>
     </ul>
   </li>
 </ul>
