--- a/views/overdue_loans.html
+++ b/views/overdue_loans.html
@@ -1,60 +1,35 @@
-<!DOCTYPE html>
-<html>
 
-<head>
-    <title>Overdue Loans</title>
-    <link rel="stylesheet" href="stylesheets/style.css">
-</head>
-<nav>
-    <ul>
-        <li><a href="all_books.html">Books</a></li>
-        <li><a href="all_patrons.html">Patrons</a></li>
-        <li><a href="all_loans.html">Loans</a></li>
-    </ul>
-</nav>
+{{> loans_page_elements}}
 
-<body>
-    <h1>Overdue Loans</h1>
-    <p> <a href="new_loan.html" class="button">Create New Loan</a></p>
-    <p>Filters <a href="all_loans.html">All</a> | <a href="overdue_loans.html">Overdue</a> | <a href="checked_loans.html">Checked Out</a></p>
-    <table>
-        <thead>
-            <tr>
-                <th>Book</th>
-                <th>Patron </th>
-                <th>Loaned on</th>
-                <th>Return by </th>
-                <th>Returned on</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><a href="book_detail.html">Harry Potter and the Goblet of Fire</a></td>
-                <td><a href="patron_detail.html">Andrew Chalkley</a></td>
-                <td>2015-12-11</td>
-                <td>2015-12-18</td>
-                <td></td>
-                <td><a href="return_book.html" class="button">Return Book</a></td>
-            </tr>
-            <tr>
-                <td><a href="book_detail.html">A Brief History of Time</a></td>
-                <td><a href="patron_detail.html">Andrew Chalkley</a></td>
-                <td>2015-12-12</td>
-                <td>2015-12-19</td>
-                <td></td>
-                <td><a href="return_book.html" class="button">Return Book</a></td>
-            </tr>
-            <tr>
-                <td><a href="book_detail.html">The Universe in a Nutshell</a></td>
-                <td><a href="patron_detail.html">Alena Holligan</a></td>
-                <td>2015-12-13</td>
-                <td>2015-12-20</td>
-                <td></td>
-                <td><a href="return_book.html" class="button">Return Book</a></td>
-            </tr>
-        </tbody>
-    </table>
-</body>
-
-</html>
+<table>
+    <thead>
+        <tr>
+            <th>Book</th>
+            <th>Patron </th>
+            <th>Loaned on</th>
+            <th>Return by </th>
+            <th>Returned on</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        {{#each data}}
+          {{#with this.dataValues}}
+          <tr>
+              <td><a href="book_detail.html">{{this.book.title}}</a></td>
+              <td>
+                <a href="patron_detail.html">
+                  {{#with this.patron}}
+                    {{this.first_name}} {{this.last_name}}
+                  {{/with}}
+                </a>
+              </td>
+              <td>{{this.loaned_on}}</td>
+              <td>{{this.return_by}}</td>
+              <td>{{this.returned_on}}</td>
+              <td><a href="/return-book/{{this.id}}" class="button">Return Book</a></td>
+          </tr>
+          {{/with}}
+        {{/each}}
+    </tbody>
+</table>
