finishing touches and additional commenting

--- a/views/all_loans.html
+++ b/views/all_loans.html
@@ -15,9 +15,9 @@
       {{#each data}}
         {{#with dataValues}}
         <tr>
-            <td><a href="book_detail.html">{{this.book.dataValues.title}}</a></td>
+            <td><a href="/book-detail/{{book_id}}">{{this.book.dataValues.title}}</a></td>
             <td>
-              <a href="patron_detail.html">
+              <a href="/patron-detail/{{patron_id}}">
               {{#with this.patron.dataValues}}
                 {{this.first_name}} {{this.last_name}}
               {{/with}}
