fixed missing requirements

--- a/views/all_loans.html
+++ b/views/all_loans.html
@@ -26,7 +26,11 @@
             <td>{{this.loaned_on}}</td>
             <td>{{this.return_by}}</td>
             <td>{{this.returned_on}}</td>
-            <td><a href="/return-book/{{this.id}}" class="button">Return Book</a></td>
+            {{#unless this.returned_on}}
+            <td>
+              <a href="/return-book/{{this.id}}" class="button">Return Book</a>
+            </td>
+            {{/unless}}
         </tr>
         {{/with}}
       {{/each}}
