--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>{{pageTitle}}</title>
-  <link rel="stylesheet" href="stylesheets/main.min.css">
+  <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 <body>
